@@ -11,6 +11,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -50,27 +51,34 @@ public class CategoryService {
 
         // 부모 카테고리가 없는 경우를 처리
         String parentName = (category.getParent() != null) ? category.getParent().getName() : null;
+        List<CategoryDto> children = categoryRepository.findByParentId(categoryId).stream().map(CategoryDto::new).collect(Collectors.toList());
 
-        return CategoryDto.builder().name(category.getName()).type(category.getType()).parentName(parentName).build();
+        return CategoryDto.builder().name(category.getName()).type(category.getType()).parentName(parentName).children(children).build();
     }
 
-//    // 목록 가져오기
-//    public List<CategoryDto> findAll(Long ledgerId) {
-//        return categoryRepository.findAll().stream().map(CategoryDto::new).toList();
+    // 카테고리 목록 가져오기 (서브 카테고리 제외)
+    public List<CategoryDto> findAll(Long ledgerId) {
+        return categoryRepository.findByLedgerIdAndParentIsNull(ledgerId).stream().map(CategoryDto::new).collect(Collectors.toList());
+    }
+
+//    // 서브 카테고리 목록 가져오기
+//    public List<CategoryDto> findAllSub(Long categoryId) {
+//        return categoryRepository.findByParentId(categoryId).stream().map(CategoryDto::new).collect(Collectors.toList());
 //    }
 
     @Transactional
     public Long update(Long categoryId, CategoryDto categoryDto) {
-        Category category = find(categoryId).toEntity();
+        Category category = categoryRepository.findById(categoryId).orElseThrow(() -> new IllegalArgumentException("카테고리 id가 존재하지 않습니다."));
 
         category.setName(categoryDto.getName());
+        category.setType(categoryDto.getType());
 
         return category.getId();
     }
 
     public void delete(Long categoryId) {
 
-        Category category = find(categoryId).toEntity();
+        Category category = categoryRepository.findById(categoryId).orElseThrow(() -> new IllegalArgumentException("카테고리 id가 존재하지 않습니다."));
 
         categoryRepository.deleteById(category.getId());
     }
